# vit-kedqr

./: .gitignore  .goreleaser.yml  Cargo.toml  README.md  deps.nix  flake.nix  go.mod  go.sum  main.go
.github/workflows/: release.yml
ci/: pack-assets.py  release-info.py  strip-own-version-from-cargo-lock.pl
internal/bech32/: bech32.go
internal/ked/: ked.go
nix/: deps.nix  package.nix
src/: lib.rs
test_files/: test-key.sk
