[package]
name = "vit-kedqr"
version = "0.1.0"
authors = ["Filip Dulic <filip.dulic@bloxico.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "vit-kedqr"
path = "./src/bin/cli.rs"

[dependencies]
chain-crypto = { git = "https://github.com/input-output-hk/chain-libs.git", branch = "master", features = [ "property-test-api" ] }
hex = "0.4"
image = "0.23.12"
qrcode = "0.12"
quircs = "0.10.0"
rand = "0.7"
structopt = "^0.3"
symmetric-cipher = { git = "https://github.com/input-output-hk/chain-wallet-libs.git", branch = "master" }
thiserror = "1.0"
